--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Dependency directories
-bower_components
-#node_modules/
-jspm_packages/
+# bower_components
+# node_modules/
+# jspm_packages/
 
 # Optional cache directory
 .npm
